--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,38 +1,9 @@
-version: 2
+version: 2.0
 jobs:
-  build:
+    build:
     working_directory: ~/repo
     docker:
       - image: circleci/node:10.16.3
     steps:
       - checkout
-      - add_ssh_keys:
-          fingerprints:
-            - $AZURE_VM_SSH_FINGERPRINT
-      - run:
-          name: Copy updated files to VM
-          command: scp -o StrictHostKeyChecking=no -r ./* $AZURE_VM_USER@$AZURE_VM_IP:~/myapp
-
-  deploy:
-    machine:
-      enabled: true
-    steps:
-      - run:
-          name: Deploy Over SSH
-          command: |
-            ssh $AZURE_VM_USER@$AZURE_VM_IP "cd myapp && sudo npm run-script stop && sudo npm install && sudo npm start"
-
-workflows:
-  version: 2
-  build:
-    jobs:
-      - build:
-          filters:
-            branches:
-              only: main
-      - deploy:
-          requires:
-            - build
-          filters:
-            branches:
-              only: main
+      - run: echo "Hello World"
